--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcc 'HD'
 - !lcsh 'Coal trade -- United States'
 - !lcsh 'Coal'
+- GITenberg
 tableOfContents: Challenge of power -- Coming of coal -- Drama of civilization --
   Coal in America -- Awakening of the miners -- Struggle for organization -- Rise
   of democracy -- Rivals of coal -- The technical revolution -- The strait gate --
